fix jumpy behavior with single login button when logging in, NOT FIXED ON IE

--- a/packages/accounts-ui/login_buttons.less
+++ b/packages/accounts-ui/login_buttons.less
@@ -216,6 +216,9 @@
     padding-bottom: 8px;
   }
 
+  .login-text-and-button .loading {
+    display: inline-block;
+  }
   &.login-buttons-dropdown-align-left #login-dropdown-list .loading {
     float: right;
   }
